# alma

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt  vercel.json
.github/ISSUE_TEMPLATE/: bug_report.md  contact.md
.github/website/: 404.html  app.html  chat.html  contact.html  download.html  history.html  images.html  index.html  privacy.html  search.html  serve.py  support.html  terms.html  thinking.html  trademark.html  voice.html
.github/workflows/: bump-version.yml  ci.yml  e2e.yml  release-macos.yml  release.yml  smoke.yml
api/: index.py
backend/: app.py  requirements.txt  static_app.py  verify.py  verify_search.py  verify_ui.py
backend/palmshed_ai/: __init__.py  __main__.py  identity.py  image_models.py  image_providers.py  models.py  sdk.py  search.py
backend/services/: __init__.py  platform.py
backend/tests/: test_app.py  test_attachment_api.py  test_attachment_model.py  test_attachment_store.py  test_auth.py  test_conversation_model.py  test_conversation_store.py  test_mail.py  test_notifications.py  test_search.py  test_storage.py
deploy/vercel/: vercel.json
docs/: api-examples.md  architecture.md  imagen-integration.md  mail.md  notifications.md  observability.md  palmshed-design.md  palmshed-tokens.md  philosophy.md  release.md  roadmap.md  search-pipeline-review.md  storage.md  testing.md  troubleshooting.md  tts-internals.md  ui-spec-v1.md  versioning.md
docs/architecture/: 0001-platform-services.md  0002-mail-service.md  0003-auth-service.md  0003-storage-service.md  0004-notifications-service.md  0005-conversation-model.md  0006-anonymous-identity.md  0007-attachment-model.md  0008-native-macos-client.md  0009-macos-packaging.md
frontend/: ARCHITECTURE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.test.tsx  App.tsx  index.css  index.tsx  react-app-env.d.ts  reportWebVitals.ts  setupTests.ts
scripts/: run-dev.sh  setup.sh
scripts/macos/: README.md  build.sh  generate-dmg-resources.sh  generate-dsstore.py  generate-icons.sh  package.sh  verify.sh
swift/: Package.resolved  Package.swift
templates/mail/: notification.html  notification.txt  password_reset.txt  (+1 more)
vortai/: __init__.py
(+134 files in other folders)
